maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:3: error: reassignment to val
  while (isOverBaggle=true){
                     ^